--- a/style.css
+++ b/style.css
@@ -1,3 +1,59 @@
-h2 {
-  color: red;
+*{
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background-color: #eee;
+}
+
+.wrapper{
+  margin: auto;
+  width: 1000px;
+}
+
+.img-banner{
+  display: none;
+  width: 50%;
+  height: 100px;
+}
+
+
+.img-hbl{
+  width: 50px;
+  height: 25px;
+  background-image: url(images/Hickok Belt Loop Sign.jpg);
+  background-size: 200%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+nav{
+  width: 100%;
+  height: 100px;
+  background-color: #fff;
+}
+
+ul{
+margin-left: 0px;
+}
+
+ul li {
+  list-style: none;
+  display: inline-block;
+  float: left;
+  line-height: 100px;
+}
+
+ul li a{
+display: block;
+text-decoration: none;
+font-size: 14px;
+font-family: sans-serif;
+color: #1e1e1e;
+padding: 0 20px;
+}
+
+ul li a:hover {
+color: red;
 }
